<resources>
    <string name="app_name">TopTalent</string>
    <string name="haveAccount">Have an account?</string>
    <string name="buttonRegister">Sign up</string>
    <string name="hintPin">Password</string>
    <string name="hintEmail">Email</string>
    <string name="home">Home</string>
    <string name="application">Applied</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="PickImage">Pick Image</string>
    <string name="Movie">Movie</string>
    <string name="login">Login</string>
    <string name="NoAccount">Don\'t have an account ?</string>
    <string name="forgotPin">Forgot Password?</string>
    <string name="signUp">Sign-up</string>
    <string name="hintName">Full Name</string>
    <string name="SignUpTitle">Sign-up here</string>
    <string name="LoginTitle">Log-in here</string>
    <string name="JobListTitle">Recent Job Available</string>
    <string name="Show">Show more</string>
    <string name="helloUsername">Hello Username,</string>
    <string name="searchTitle">Lets find your dream job!</string>
    <string name="applicationTitle">Application Status</string>
    <string name="noApplication">No Application Available</string>
    <string name="applyNow">Apply Now!</string>
    <string name="profileTitle">Profile</string>
    <string name="searchHere">Search here</string>
    <string name="uploadPhoto">upload your photo profile</string>
    <string name="jobDetail">Job Details</string>
    <string name="Apply">Apply</string>
    <string name="jobDesc">Description</string>
    <string name="jobRequire">Requirement</string>
    <string name="aboutCompany">About Company</string>
    <string name="aboutYou">About you</string>
    <string name="hintBio">Tell  us about you</string>
    <string name="fullName">Full Name</string>
    <string name="hintFullName">Full name</string>
    <string name="personalInfo">Personal Information</string>
    <string name="hintPhone">Phone number</string>
    <string name="hintBirth">Date of birth</string>
    <string name="hintAddress">Current address</string>
    <string name="education">Education Background</string>
    <string name="hintDegree">Degree</string>
    <string name="cv">Curriculum Vitae</string>
    <string name="statusSent">Sent</string>
    <string name="industries">Industries</string>
    <string name="employee">Employee</string>
    <string name="culture">Culture</string>
    <string name="contactLink">Site</string>
    <string name="jobBenefit">Benefit</string>
    <string name="resume">Choose New CV</string>
    <string name="applyTittle">Want to update your CV?</string>
    <string name="hintProfession">Current Profession</string>
    <string name="skill">Skills</string>
    <string name="hintSkill">Skills</string>
    <string name="link">Link</string>
    <string name="hintLinkedin">LinkedIn</string>
    <string name="hintPorto">Portfolio</string>
    <string name="fileRequired">File size max 5 mb</string>
    <string name="helperName">*Required</string>
    <string name="fileRequired1">File format .pdf or .png</string>
    <string name="hintResume">Upload here</string>
    <string name="requireTitle">Password required:</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="pinRequired">minimum 8 character</string>
    <string name="fpinTitle">Forgot your password?</string>
    <string name="fpinInstruction">Enter your registered email to receive password reset instruction</string>
    <string name="send">Send Email</string>
    <string name="hintNewPin">New password</string>
    <string name="hintConfirmPin">Confirm new password</string>
    <string name="requirePin">Both password must match</string>
    <string name="submit">Submit</string>
    <string name="rpinTitle">Reset password</string>
    <string name="rpinInstruction">Please make sure your new password must be different from previous user password.</string>
    <string name="checkEmailTitle">Check your email</string>
    <string name="checkEmailMessage">We have sent a password recovery instruction to your registered email.</string>
    <string name="ok">Got It</string>
    <string name="checkEmailInstruction">Did not receive the email? check you spam folder or</string>
    <string name="checkEmailInstruction1">try another email address</string>
    <string name="successAlert">Successful</string>
    <string name="successMessage">Nice! You’ve successfully updated your password</string>
    <string name="backLogin">Go back to Login</string>
    <string name="pinRequired1">1 upper-case [A-Z]</string>
    <string name="pinRequired2">1 lower-case [a-z]</string>
    <string name="pinRequired3">1 symbol/special character</string>
    <string name="noJob">No Job Available</string>
    <string name="searchJob">Search job here</string>
    <string name="noJobList">Job not found</string>
    <string name="companyName">Company Name</string>
    <string name="updateCV">Update</string>
    <string name="btnSave">Save</string>
    <string name="btnJustApply">Apply</string>
    <string name="sosmedLink">link</string>
    <string name="skills">Skills</string>
    <string name="requiredSkill">Choose at least 3 skills</string>
    <string name="skill1">skill1</string>
    <string name="btnchoose">Choose</string>
    <string name="latestWorkExperience">Latest Work Experience</string>
    <string name="hintCompanyName">Company Name</string>
    <string name="hintDateStart">Year Start</string>
    <string name="hintDateEnd">Year End</string>
    <string name="getStated">Get Started</string>
    <string name="onboarddesc">Description</string>
    <string name="onboardtitle">Title</string>
    <string name="onboardsubtitle">Sub-Title</string>
    <string name="jobPosition">Job Position</string>
    <string name="companyLocation">Company Location</string>
    <string name="dateCreated">Date created:</string>
    <string name="loginasguest">Login as a Guest</string>
    <string name="instruction">"Create Top Talent Profile "</string>
    <string name="introguest">Get personalised recommendations and apply to jobs easily and fast</string>
    <string name="createAt">create at</string>
    <string name="ivHideSheet">ivHide</string>
    <string name="content">content</string>
    <string name="requirementList">requirement list</string>
    <string name="benefitList">benefit list</string>
    <string name="tittleUploadNewCV">Want to upload new CV?</string>
    <string name="chooseFile">Choose File Here</string>
    <string name="date">date</string>
    <string name="type">Type:</string>
    <string name="jobType">job type</string>
    <string name="salary">Salary:</string>
    <string name="salaryRange">salary range</string>
    <string name="job">Job</string>
    <string name="company">Company</string>
    <string-array name="degrees">
        <item>Senior High School</item>
        <item>Diploma</item>
        <item>Bachelor</item>
        <item>Master</item>
        <item>Doctoral</item>
        <item>Others</item>
    </string-array>
</resources>