<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    tools:context=".activity.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:paddingTop="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/rpinTitle"
            android:textColor="@color/dark_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/rpinInstruction"
            android:textColor="@color/dark_black"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hintNewPin"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/medium_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textPassword"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/requireTitle"
            android:textColor="@color/medium_blue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/pinRequired"
            android:textAlignment="center"
            android:textColor="@color/dark_black"
            android:textSize="11sp"
            app:drawableStartCompat="@drawable/ic_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/pinRequired1"
            android:textAlignment="center"
            android:textColor="@color/dark_black"
            android:textSize="11sp"
            app:drawableStartCompat="@drawable/ic_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/pinRequired2"
            android:textAlignment="center"
            android:textColor="@color/dark_black"
            android:textSize="11sp"
            app:drawableStartCompat="@drawable/ic_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/pinRequired3"
            android:textAlignment="center"
            android:textColor="@color/dark_black"
            android:textSize="11sp"
            app:drawableStartCompat="@drawable/ic_dot" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hintConfirmPin"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/medium_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textPassword"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/requirePin"
            android:textColor="@color/medium_blue"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_button_primary"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>