<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.SuccessfullDialogFragment"
    android:background="@drawable/bg_dialog_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="24dp"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:src="@drawable/ic_check_circle"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/successAlert"
            android:textColor="@color/dark_black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/successMessage"
            android:textColor="@color/dark_black"
            android:textSize="14sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnBackLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_btn_secondary"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/backLogin"
            android:textColor="@color/blue_primary"
            android:textAllCaps="false"
            android:textSize="16sp"/>

    </LinearLayout>

</FrameLayout>