<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity"
    android:background="@color/grey_light">

    <LinearLayout
        android:id="@+id/llLogoLogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="?actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llLogoLogin"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/llLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingTop="?actionBarSize">

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/LoginTitle"
                android:textColor="@color/dark_black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hintEmail"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/medium_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hintPin"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/medium_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgotPin"
                android:textAlignment="viewEnd"
                android:textColor="@color/secondary_text"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="12sp"/>

            <include
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/progress_button_login"
                android:layout_marginVertical="16dp" />

            <LinearLayout
                android:id="@+id/llSignUpLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNoAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoAccount"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/dark_black"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="12sp"
                    android:text="@string/signUp"
                    android:textColor="@color/medium_blue" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuest"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/loginasguest"
        android:textAllCaps="false"
        android:textSize="16sp" />

</RelativeLayout>