<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="20dp"
    style="@style/ModalBottomSheetDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/skills"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/dark_black"
        android:paddingTop="16dp"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="16sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/requiredSkill"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/dark_black"
            android:textSize="12sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_important"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSkill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/chip_skill"/>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        app:cornerRadius="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnchoose"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:rippleColor="@color/white"
        android:backgroundTint="@color/medium_blue"/>

</LinearLayout>