<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_onboarding">

    <TextView
        android:id="@+id/tvOnBoardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/onboardtitle"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOnBoardSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="62dp"
        android:layout_marginVertical="12dp"
        android:text="@string/onboardsubtitle"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOnBoardTitle" />

    <ImageView
        android:id="@+id/ivOnBoard"
        android:layout_width="300dp"
        android:layout_height="422dp"
        android:layout_marginHorizontal="28dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOnBoardSubTitle"
        app:srcCompat="@drawable/ic_placeholder_list" />

    <TextView
        android:id="@+id/tvOnBoardDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="114dp"
        android:text="@string/onboarddesc"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>